# PropChain-contract

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  clippy.toml  crates.js  help.html  rustfmt.toml  settings.html  src-files.js
contracts/traits/: Cargo.toml
contracts/traits/src/: lib.rs
docs/: contracts.md
oracle/: all.html  index.html  sidebar-items.js  struct.PropertyValuationOracle.html
propchain_contracts/: all.html  enum.ApprovalType.html  enum.OracleSourceType.html  enum.PropertyType.html  enum.ValuationMethod.html  index.html  sidebar-items.js  struct.ComparableProperty.html  struct.LocationAdjustment.html  struct.MarketTrend.html  struct.OracleSource.html  struct.PriceAlert.html  struct.PriceData.html  struct.PropertyInfo.html  struct.PropertyMetadata.html  struct.PropertyValuation.html  struct.ValuationWithConfidence.html  struct.VolatilityMetrics.html  trait.AdvancedEscrow.html  trait.Escrow.html  trait.PropertyRegistry.html
propchain_escrow/: all.html  index.html
propchain_proxy/: all.html  index.html
propchain_traits/: all.html  enum.ApprovalType.html  enum.OracleSourceType.html  enum.PropertyType.html  enum.ValuationMethod.html  index.html  sidebar-items.js  struct.ComparableProperty.html  struct.LocationAdjustment.html  struct.MarketTrend.html  struct.OracleSource.html  struct.PriceAlert.html  struct.PriceData.html  struct.PropertyInfo.html  struct.PropertyMetadata.html  struct.PropertyValuation.html  struct.ValuationWithConfidence.html  struct.VolatilityMetrics.html  trait.AdvancedEscrow.html  trait.Escrow.html  (+1 more)
(+148 files in other folders)
